Upgrade gradle, address some deprecation warnings